--- a/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/ert_art/ERT_ideal.yaml
+++ b/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/ert_art/ERT_ideal.yaml
@@ -4,21 +4,21 @@ ERT:
   - name: system.DRAM
     actions:
     - name: read
-      energy: 0  # Ideal: no cost for DRAM access
+      energy: 512  # Correct base DRAM cost from ERT.yaml
     - name: write
-      energy: 0
+      energy: 512
     - name: idle
       energy: 0
   - name: system.SM.Subpartition[0..3].PE[0..255].LRF
     actions:
     - name: write
-      energy: 0
+      energy: 0.02435  # Correct base LRF cost from ERT.yaml
     - name: read
-      energy: 0
+      energy: 0.02435
     - name: gated_write
-      energy: 0
+      energy: 0 # Gated actions have 0 energy in original ERT
     - name: gated_read
-      energy: 0
+      energy: 0 # Gated actions have 0 energy in original ERT
     - name: metadata_read
       energy: 0  # No metadata overhead
     - name: metadata_write
@@ -30,21 +30,21 @@ ERT:
   - name: system.SM.Subpartition[0..3].PE[0..255].MAC
     actions:
     - name: mac_random
-      energy: 0  # Ideal: no computation cost
+      energy: 0.44688 # Correct base MAC cost from ERT.yaml
     - name: mac_gated
-      energy: 0
+      energy: 0 # Gated actions have 0 energy in original ERT
     - name: mac_skipped
       energy: 0
   - name: system.SM.Subpartition[0..3].RF
     actions:
     - name: write
-      energy: 0
+      energy: 3.20183 # Correct base RF cost from ERT.yaml
     - name: read
-      energy: 0
+      energy: 3.1647
     - name: gated_write
-      energy: 0
+      energy: 0.00081 # Gated actions have energy cost in original ERT
     - name: gated_read
-      energy: 0
+      energy: 0.00081 # Gated actions have energy cost in original ERT
     - name: metadata_read
       energy: 0
     - name: metadata_write
@@ -56,13 +56,13 @@ ERT:
   - name: system.SM.SMEM
     actions:
     - name: write
-      energy: 0
+      energy: 599.806 # Correct base SMEM cost from ERT.yaml
     - name: read
-      energy: 0
+      energy: 536.05005
     - name: gated_write
-      energy: 0
+      energy: 0.26703 # Gated actions have energy cost in original ERT
     - name: gated_read
-      energy: 0
+      energy: 0.26703 # Gated actions have energy cost in original ERT
     - name: metadata_read
       energy: 0
     - name: metadata_write
