--- a/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/sparse-opt/unstructured.yaml
+++ b/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/sparse-opt/unstructured.yaml
@@ -1,12 +1,7 @@
 sparse_optimizations:
   version: 0.1
   name: unstructured_sparse_optimizations
-  representation:
-    weights: CSR
-    activations: uncompressed
-  skipping: true
-  gating: true
-  metadata_cost: false
+  # Contains no targets, representation, or global flags
   zero_cost: false
   skip_threshold: 0
   gating_threshold: 0
