--- a/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/workload/alexnet_conv1.yaml
+++ b/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/workload/alexnet_conv1.yaml
@@ -32,6 +32,7 @@ problem:
       - - - M
       - - - R
       - - - S
+      metadata-word-bits: 32
     - name: Inputs
       projection:
       - - - N
