--- a/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/workload/mobilenet_conv1.yaml
+++ b/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/workload/mobilenet_conv1.yaml
@@ -20,6 +20,7 @@ problem:
           - [ [G] ]
           - [ [R] ]
           - [ [S] ]
+        metadata-word-bits: 32
       - name: Inputs
         projection:
           - [ [N] ]
