--- a/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/workload/resnet50_conv1.yaml
+++ b/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/workload/resnet50_conv1.yaml
@@ -32,6 +32,8 @@ problem:
       - - - M
       - - - R
       - - - S
+      # format: CSR
+      metadata-word-bits: 32
     - name: Inputs
       projection:
       - - - N
