added new files

--- a/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/mapper/mapper.yaml
+++ b/workspace/2022.micro.artifact/evaluation_setups/unstructured_sparse_eval/mapper/mapper.yaml
@@ -5,6 +5,7 @@ mapper:
   optimization_metrics:
     - energy
     - cycles
+  sparse_optimizations: ../sparse-opt/structured_2_4.yaml
   constraints:
     - type: bypass
       target: DRAM
